feat: Enhance DayMeal and WeeklyMenu repositories with custom queries
- Added a custom query in DayMealRepository to fetch DayMeal by weekly menu ID, day of week, and meal type with recipe details.
- Introduced a new query in WeeklyMenuRepository to fetch a WeeklyMenu by ID along with its associated DayMeals and recipes.
- Updated WeeklyMenuServiceImpl to utilize the new repository methods for improved data retrieval and management.
- Added debug logging to track the process of removing recipes from weekly menus and converting menu responses.